--- a/index.htm
+++ b/index.htm
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/javasript/styles/styles.css"/>
     <link rel="stylesheet" href="src/javasript/styles/header.css"/>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Autografc</title>
 </head>
 <body>
     <header>
         <nav id="navbar">
-            <i class="fa-solid fa-gauge" id="nav_logo">AutoGrafc</i>
+            <i class="fa-solid fa-burguer" id="nav_logo">AutoGrafc</i>
             <ul id="nav_list">
                 <li class="nav-item active">
                  <a href="#home">Início</a>   
@@ -21,7 +21,7 @@
                     <a href="menu">Veículos</a>   
                    </li>
                    <li class="nav-item">
-                    <a href="#testimonial">Avaliações</a>   
+                    <a href="#testimonials">Avaliações</a>   
                    </li>
             </ul>
             <button class="btn-default">
@@ -51,6 +51,6 @@
 
         </div>
     </header>
-    
+    <script src="src/javasript/script.js"></script>
 </body>
 </html>
