--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/javasript/styles/styles.css"/>
     <link rel="stylesheet" href="src/javasript/styles/header.css"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP24hpQINQg=="crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Autografc</title>
 </head>
 <body>
@@ -51,6 +51,45 @@
 
         </div>
     </header>
+    <main id="content">
+        <section id="home">
+            <div id="cta">
+                <h1 class="title">
+                    Acelerando a imaginação
+                <span>Você</span>
+                </h1>
+<p class="description">
+    Descrição do site detalhada para alterarar depois
+</p>
+<div id="cta_buttons">
+    <a href="#" class="btn-default">
+    Catalogo de veículos
+</a>
+<a href="tel: +55555" id="phone_button">
+<button class="btn-default">
+    <i class="fa-solid fa-phone"></i>
+    (11)9999-9999
+</button>
+</a>
+</div>
+<div class="social-media-buttons">
+    <a href="">
+        <i class="fa-brands fa-whatsapp"></i>
+    </a>
+    <a href="">
+        <i class="fa-brands fa-facebook"></i>
+    </a>
+    <a href="">
+        <i class="fa-brands fa-instagram"></i>
+    </a>
+</div>
+            </div>
+            <div id="banner">
+                <img src="src/images/imagem1.png" alt="">
+            </div>
+
+        </section>
+    </main>
     <script src="src/javasript/script.js"></script>
 </body>
 </html>
