--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/javasript/styles/styles.css"/>
     <link rel="stylesheet" href="src/javasript/styles/header.css"/>
+    <link rel="stylesheet" href="src/javasript/styles/home.css"/>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP24hpQINQg=="crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Autografc</title>
 </head>
@@ -53,13 +55,14 @@
     </header>
     <main id="content">
         <section id="home">
+            <div class="shappe"></div>
             <div id="cta">
                 <h1 class="title">
-                    Acelerando a imaginação
-                <span>Você</span>
+                    Acelerando a 
+                <span>Imaginação</span>
                 </h1>
 <p class="description">
-    Descrição do site detalhada para alterarar depois
+    Seja bem vindo ao meu site de exposição automotiva
 </p>
 <div id="cta_buttons">
     <a href="#" class="btn-default">
