--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/javasript/styles/styles.css"/>
     <link rel="stylesheet" href="src/javasript/styles/header.css"/>
@@ -76,17 +77,7 @@
 </button>
 </a>
 </div>
-<div class="social-media-buttons">
-    <a href="">
-        <i class="fa-brands fa-whatsapp"></i>
-    </a>
-    <a href="">
-        <i class="fa-brands fa-facebook"></i>
-    </a>
-    <a href="">
-        <i class="fa-brands fa-instagram"></i>
-    </a>
-</div>
+
             </div>
             <div id="banner">
                 <img src="src/images/imagem1.png" alt="">
@@ -234,7 +225,7 @@
     <script src="src/javasript/script.js"></script>
     <div id="components_content">
         <h2 class="section-title">
-
+          Depoimentos
         </h2>
         <h3 class="section-title">
             Comentários de especialistas em automóveis
@@ -247,5 +238,65 @@
         </div>
 
     </div>
+<footer>
+    <div class="social-media-buttons" id="footer_content">
+        <a href="">
+            <i class="fa-brands fa-whatsapp"></i>
+        </a>
+        <a href="">
+            <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+    </div>
+       </div>
+    </div>
+    <ul class="footer-list">
+    <li>
+        <h3>Blog</h3>
+    </li>
+    <li>
+        <a href="#" class="footer-link">Tech</a>
+    </li>
+    <li>
+        <a href="#" class="footer-link">Tech</a>
+    </li>
+    <li>
+        <a href="#" class="footer-link">Tech</a>
+    </li>
+    </ul>
+    <ul class="footer-list">
+        <li>
+            <h3>Onshape</h3>
+        </li>
+        <li>
+            <a href="#" class="footer-link">Desenhos</a>
+        </li>
+        <li>
+            <a href="#" class="footer-link">Impressões</a>
+        </li>
+        <li>
+            <a href="#" class="footer-link">Modelagens</a>
+        </li>
+        </ul>
+        <div id="footer_subscribe">
+            <h3>Subscribe</h3>
+            <p>
+                Entre com seu email
+            </p>
+            <div id="input_group">
+                <input type="email" id="email">
+                <button>
+                    <i class="fa-solid fa-paper-plane"></i>
+                </button>
+            </div>
+        </div>
+        <div id="footer_copyright">
+            &#169
+            2024 all rights reserved
+        </div>
+    </div>
+</footer>
 </body>
 </html>
