--- a/index.htm
+++ b/index.htm
@@ -238,65 +238,78 @@
         </div>
 
     </div>
-<footer>
-    <div class="social-media-buttons" id="footer_content">
-        <a href="">
-            <i class="fa-brands fa-whatsapp"></i>
-        </a>
-        <a href="">
-            <i class="fa-brands fa-facebook"></i>
-        </a>
-        <a href="">
-            <i class="fa-brands fa-instagram"></i>
-        </a>
-    </div>
-       </div>
-    </div>
-    <ul class="footer-list">
-    <li>
-        <h3>Blog</h3>
-    </li>
-    <li>
-        <a href="#" class="footer-link">Tech</a>
-    </li>
-    <li>
-        <a href="#" class="footer-link">Tech</a>
-    </li>
-    <li>
-        <a href="#" class="footer-link">Tech</a>
-    </li>
-    </ul>
-    <ul class="footer-list">
-        <li>
-            <h3>Onshape</h3>
-        </li>
-        <li>
-            <a href="#" class="footer-link">Desenhos</a>
-        </li>
-        <li>
-            <a href="#" class="footer-link">Impressões</a>
-        </li>
-        <li>
-            <a href="#" class="footer-link">Modelagens</a>
-        </li>
-        </ul>
-        <div id="footer_subscribe">
-            <h3>Subscribe</h3>
-            <p>
-                Entre com seu email
-            </p>
-            <div id="input_group">
-                <input type="email" id="email">
-                <button>
-                    <i class="fa-solid fa-paper-plane"></i>
-                </button>
+    <footer>
+        <div id="footer_content">
+            <div id="footer_contacts">
+                <h1>Logo</h1>
+                <p>It's all about your dreams.</p>
+
+                <div id="footer_social_media">
+                    <a href="#" class="footer-link" id="instagram">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+
+                    <a href="#" class="footer-link" id="facebook">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+
+                    <a href="#" class="footer-link" id="whatsapp">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                </div>
+            </div>
+            
+            <ul class="footer-list">
+                <li>
+                    <h3>Blog</h3>
+                </li>
+                <li>
+                    <a href="#" class="footer-link">Tech</a>
+                </li>
+                <li>
+                    <a href="#" class="footer-link">Adventures</a>
+                </li>
+                <li>
+                    <a href="#" class="footer-link">Music</a>
+                </li>
+            </ul>
+
+            <ul class="footer-list">
+                <li>
+                    <h3>Products</h3>
+                </li>
+                <li>
+                    <a href="#" class="footer-link">App</a>
+                </li>
+                <li>
+                    <a href="#" class="footer-link">Desktop</a>
+                </li>
+                <li>
+                    <a href="#" class="footer-link">Cloud</a>
+                </li>
+            </ul>
+
+            <div id="footer_subscribe">
+                <h3>Subscribe</h3>
+
+                <p>
+                    Enter your e-mail to get notified about
+                    our news solutions
+                </p>
+
+                <div id="input_group">
+                    <input type="email" id="email">
+                    <button>
+                        <i class="fa-regular fa-envelope"></i>
+                    </button>
+                </div>
             </div>
         </div>
+
         <div id="footer_copyright">
-            &#169
-            2024 all rights reserved
+                &#169
+            2023 all rights reserved 
         </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
