--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="src/images/logomarca.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/javasript/styles/styles.css"/>
@@ -82,7 +83,6 @@
             <div id="banner">
                 <img src="src/images/imagem1.png" alt="">
             </div>
-
         </section>
         <section id="menu">
             <h2 class="section-title">Catálogo</h2>
@@ -215,34 +215,71 @@
                             <i class="fa-solid fa-basket-shopping"></i>
                         </button>
                     </div>
+                    
                 </div>
             </div>
-        </section>
-        <section id="Components">
-        <img src="src/images/pistoncup.png" alt="">   
         </section>
     </main>
     <script src="src/javasript/script.js"></script>
     <div id="components_content">
         <h2 class="section-title">
-          Depoimentos
+          Patrocinadores
         </h2>
         <h3 class="section-title">
-            Comentários de especialistas em automóveis
+            Conheça nossos patrocinadores
+            <section id="Coments">
+                <img src="src/images/pistoncup.png" id="coments_cup" alt="">   
+                </section>
         </h3>
-        <div id="Comentários">
-            <div class="Comentários">
-                <img src="" alt="">
+        <div id="coments">
+            <div class="coments">
+                <img src="src/images/logotipoford.png" class="comentarios-avatar" alt=""> 
+                <div class="coments-content">
+                    <p>
+                        Ford
+                    </p>
+                </div>
+                <p>
+                    A Ford é uma das montadoras de automóveis mais conhecidas do mundo. Fundada pelo americano Henry Ford, a empresa mudou a indústria automobilística e fabricou alguns dos modelos mais conhecidos da história. Atualmente os carros da empresa continuam sendo muito procurados em todo o mundo, e o Brasil não é exceção.
+                </p>
 
             </div>
+            <div id="coments">
+                <div class="coments">
+                    <img src="src/images/logotipochevrolet.png" class="comentarios-avatar" alt=""> 
+                    <div class="coments-content">
+                        <p>
+                            Chevrolet                      
+                        </p>
+                    </div>
+                    <p>
+                        Criada em 1911, sua sede fica em Detroit (EUA), que já foi a capital mundial do carro. Mas nasceu com Louis Chevrolet, mecânico suíço que foi um dos melhores pilotos dos EUA, cuja fama foi usada para vender carros, ideia do outro sócio, William C. Durant.
+                    </p>
+    
+                </div>
         </div>
+        <div id="coments">
+        <div class="coments">
+            <img src="src/images/logotipovolkswagen.png" class="comentarios-avatar" alt=""> 
+            <div class="coments-content">
+                <p>
+                    Volkswagen
+                </p>
+            </div>
+            <p>
+                Presente na vida, no coração e na garagem dos brasileiros há 70 anos, a Volkswagen é a maior produtora de automóveis do Brasil, com 24 milhões de veículos fabricados, e a maior exportadora da história, com mais de 4 milhões de carros embarcados.
+            </p>
 
+        </div>
+        <button class="btn-default">
+           Ver mais
+        </button>
     </div>
     <footer>
         <div id="footer_content">
             <div id="footer_contacts">
-                <h1>Logo</h1>
-                <p>It's all about your dreams.</p>
+                <h1>PucnotSip</h1>
+                <p>Ultrapassando os limites de criatividade</p>
 
                 <div id="footer_social_media">
                     <a href="#" class="footer-link" id="instagram">
@@ -308,7 +345,7 @@
 
         <div id="footer_copyright">
                 &#169
-            2023 all rights reserved 
+            2024 all rights reserved 
         </div>
     </footer>
 </body>
