--- a/index.htm
+++ b/index.htm
@@ -219,62 +219,68 @@
                 </div>
             </div>
         </section>
-    </main>
-    <script src="src/javasript/script.js"></script>
-    <div id="components_content">
-        <h2 class="section-title">
-          Patrocinadores
-        </h2>
-        <h3 class="section-title">
-            Conheça nossos patrocinadores
-            <section id="Coments">
-                <img src="src/images/pistoncup.png" id="coments_cup" alt="">   
-                </section>
-        </h3>
-        <div id="coments">
-            <div class="coments">
-                <img src="src/images/logotipoford.png" class="comentarios-avatar" alt=""> 
-                <div class="coments-content">
-                    <p>
-                        Ford
-                    </p>
-                </div>
-                <p>
-                    A Ford é uma das montadoras de automóveis mais conhecidas do mundo. Fundada pelo americano Henry Ford, a empresa mudou a indústria automobilística e fabricou alguns dos modelos mais conhecidos da história. Atualmente os carros da empresa continuam sendo muito procurados em todo o mundo, e o Brasil não é exceção.
-                </p>
+        <section id="testimonials">
+            <img src="src/images/chef.png" id="testimonial_chef" alt="">
 
-            </div>
-            <div id="coments">
-                <div class="coments">
-                    <img src="src/images/logotipochevrolet.png" class="comentarios-avatar" alt=""> 
-                    <div class="coments-content">
-                        <p>
-                            Chevrolet                      
-                        </p>
+            <div id="testimonials_content">
+                <h2 class="section-title">
+                    Depoimentos
+                </h2>
+                <h3 class="section-subtitle">
+                    O que os clientes falam sobre nós
+                </h3>
+
+                <div id="feedbacks">
+                    <div class="feedback">
+                        <img src="src/images/avatar.png" class="feedback-avatar" alt="">
+
+                        <div class="feedback-content">
+                            <p>
+                                Fulana de Tal
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                            </p>
+                            <p>
+                                "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Repellat voluptatibus cumque dolor ea est quae alias necessitatibus"
+                            </p>
+                        </div>
                     </div>
-                    <p>
-                        Criada em 1911, sua sede fica em Detroit (EUA), que já foi a capital mundial do carro. Mas nasceu com Louis Chevrolet, mecânico suíço que foi um dos melhores pilotos dos EUA, cuja fama foi usada para vender carros, ideia do outro sócio, William C. Durant.
-                    </p>
-    
-                </div>
-        </div>
-        <div id="coments">
-        <div class="coments">
-            <img src="src/images/logotipovolkswagen.png" class="comentarios-avatar" alt=""> 
-            <div class="coments-content">
-                <p>
-                    Volkswagen
-                </p>
-            </div>
-            <p>
-                Presente na vida, no coração e na garagem dos brasileiros há 70 anos, a Volkswagen é a maior produtora de automóveis do Brasil, com 24 milhões de veículos fabricados, e a maior exportadora da história, com mais de 4 milhões de carros embarcados.
-            </p>
 
-        </div>
-        <button class="btn-default">
-           Ver mais
-        </button>
-    </div>
+                    <div class="feedback">
+                        <img src="src/images/avatar.png" class="feedback-avatar" alt="">
+
+                        <div class="feedback-content">
+                            <p>
+                                Fulana de Tal
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                            </p>
+                            <p>
+                                "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Repellat voluptatibus cumque dolor ea est quae alias necessitatibus"
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <button class="btn-default">
+                    Ver mais avaliações
+                </button>
+            </div>
+        </section>
+    </main>
+
     <footer>
         <div id="footer_content">
             <div id="footer_contacts">
