--- a/index.htm
+++ b/index.htm
@@ -230,7 +230,7 @@
             </div>
         </section>
         <section id="testimonials">
-            <img src="src/images/pistoncup.png" id="testimonial_chef" alt="">
+            <img src="src/images/banner.png" id="testimonial_chef" alt="">
 
             <div id="testimonials_content">
                 <h2 class="section-title">
