--- a/index.htm
+++ b/index.htm
@@ -33,10 +33,10 @@
                  <a href="#home">Início</a>   
                 </li>
                 <li class="nav-item">
-                    <a href="menu">Veículos</a>   
+                    <a href="menu">História</a>   
                    </li>
                    <li class="nav-item">
-                    <a href="#testimonials">Avaliações</a>   
+                    <a href="#testimonials">Parceiros</a>   
                    </li>
             </ul>
             <button class="btn-default">
@@ -54,7 +54,7 @@
                  <a href="#home">Início</a>   
                 </li>
                 <li class="nav-item">
-                    <a href="menu">Veículos</a>   
+                    <a href="menu">História</a>   
                    </li>
                    <li class="nav-item">
                     <a href="#testimonial">Avaliações</a>   
@@ -114,14 +114,7 @@
                         Compete na categoria de heart médio
                     </span>
 
-                    <div class="dish-rate">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <span>(500+)</span>
-                    </div>
+                   
 
                     <div class="dish-price">
                         <h4>R$89,000</h4>
@@ -143,14 +136,6 @@
                         Sedan esportivo
                     </span>
 
-                    <div class="dish-rate">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <span>(500+)</span>
-                    </div>
 
                     <div class="dish-price">
                         <h4>R$200,000</h4>
@@ -172,15 +157,6 @@
                         Hibrido que compete na categoria de sedans
                     </span>
 
-                    <div class="dish-rate">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <span>(500+)</span>
-                    </div>
-
                     <div class="dish-price">
                         <h4>R$150,000</h4>
                     </div>
@@ -201,17 +177,9 @@
                         Compete na categoria de SUV's
                     </span>
 
-                    <div class="dish-rate">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <span>(500+)</span>
-                    </div>
 
                     <div class="dish-price">
-                        <h4>r$ 170,000</h4>
+                        <h4>R$ 170,000</h4>
                     </div>
                     
                 </div>
