--- a/index.htm
+++ b/index.htm
@@ -94,99 +94,23 @@
                 <img src="src/images/imagem1.png" alt="">
             </div>
         </section>
-        <section id="menu">
-            <h2 class="section-title">Catálogo</h2>
-            <h3 class="section-subtitle">Linha de largada</h3>
+        <section class="sobre">
+            <div class="interface">
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="src/images/banner.png" alt="">
+                    </div><!--img-sobre-->
 
-            <div id="dishes">
-                <div class="dish">
-                    <div class="dish-heart">
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
-
-                    <img src="src/images/volkswagenpolo.png" class="dish-image" alt="">
-
-                    <h3 class="dish-title">
-                        Volkswagen Polo
-                    </h3>
-
-                    <span class="dish-description">
-                        Compete na categoria de heart médio
-                    </span>
-
-                   
-
-                    <div class="dish-price">
-                        <h4>R$89,000</h4>
-                    </div>
-                </div>
-
-                <div class="dish">
-                    <div class="dish-heart">
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
-
-                    <img src="src/images/hondacivic.png" class="dish-image" alt="">
-
-                    <h3 class="dish-title">
-                        Honda Civic
-                    </h3>
-
-                    <span class="dish-description">
-                        Sedan esportivo
-                    </span>
-
-
-                    <div class="dish-price">
-                        <h4>R$200,000</h4>
-                    </div>
-                </div>
-
-                <div class="dish">
-                    <div class="dish-heart">
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
-
-                    <img src="src/images/toyotacorolla.png" class="dish-image" alt="">
-
-                    <h3 class="dish-title">
-                        Toyota Corolla
-                    </h3>
-
-                    <span class="dish-description">
-                        Hibrido que compete na categoria de sedans
-                    </span>
-
-                    <div class="dish-price">
-                        <h4>R$150,000</h4>
-                    </div>
-                </div>
-
-                <div class="dish">
-                    <div class="dish-heart">
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
-
-                    <img src="src/images/volkswagentaos.png" class="dish-image" alt="">
-
-                    <h3 class="dish-title">
-                        Volkswagen Taos
-                    </h3>
-
-                    <span class="dish-description">
-                        Compete na categoria de SUV's
-                    </span>
-
-
-                    <div class="dish-price">
-                        <h4>R$ 170,000</h4>
-                    </div>
-                    
-                </div>
-            </div>
-        </section>
+                    <div class="txt-sobre">
+                        <h2>MUITO PRAZER, <span>SOU JOÃO VICTOR FARIAS.</span></h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At accusantium ducimus dicta suscipit, neque cumque sunt tenetur totam delectus magnam minus ratione. Quidem sequi velit voluptatibus eos omnis ullam officiis.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quidem quae iusto repellendus eaque, ipsum sed voluptate explicabo voluptas, dolorum porro sequi laudantium? Obcaecati quae, dolores illo officiis a numquam.</p>
+                        </div><!--btn-social-->
+                    </div><!--txt-sobre-->
+                </div><!--flex-->
+            </div><!--interface-->
         <section id="testimonials">
-            <img src="src/images/banner.png" id="testimonial_chef" alt="">
+            <img src="src/images/banner.png"  id="testimonial_chef" alt="">
 
             <div id="testimonials_content">
                 <h2 class="section-title">
@@ -205,9 +129,9 @@
                                 Ford
                             </p>
                             <p>
-                                "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Repellat voluptatibus cumque dolor ea est quae alias necessitatibus"
+                                A Ford é a segunda maior fabricante de automóveis norte-americana (precedida pela General Motors) e a quinta maior do mundo com base nas vendas de veículos em 2010. No final de 2010, a Ford era a quinta maior fabricante de automóveis na Europa e no Brasil em 2019.
                             </p>
+
                         </div>
                     </div>
 
@@ -219,8 +143,7 @@
                                 Chevrolet
                             </p>
                             <p>
-                                "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Repellat voluptatibus cumque dolor ea est quae alias necessitatibus"
+                                Criada em 1911, sua sede fica em Detroit (EUA), que já foi a capital mundial do carro. Mas nasceu com Louis Chevrolet, mecânico suíço que foi um dos melhores pilotos dos EUA, cuja fama foi usada para vender carros, ideia do outro sócio, William C. Durant.
                             </p>
                         </div>
                     </div>
@@ -232,15 +155,13 @@
                                 Volkswagen
                             </p>
                             <p>
-                                "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Repellat voluptatibus cumque dolor ea est quae alias necessitatibus"
+                                A empresa nasceu nos anos 1930, na Alemanha, com a proposta de construir um automóvel que fosse acessível ao cidadão comum. O carro popular era um projeto para que os alemães, abalados pela Primeira Guerra Mundial (1914-1918) e suas consequências, pudessem ter um transporte para uso pessoal.
                             </p>
-                        </div>
+                        </div>     
                     </div>
                 </div>
-
                 <button class="btn-default">
-                    <a href="https://www.chevrolet.com.br/" id="btn-default">Mais</a>
+                    <a href="parceiros.html" id="btn-default">Saiba mais</a>
                 </button>
             </div>
         </section>
@@ -288,7 +209,7 @@
                     <h3>Projetos<h3>
                 </li>
                 <li>
-                    <a href="#" class="footer-link">3D</a>
+                    <a href="https://cad.onshape.com/documents/90b8f91da2e75e5fae3eea5f/w/f622f85d9192ac144a5e3db3/e/9d2b85860af27374797d2b1e?renderMode=0&uiState=66ac12e60144af24d1b69224" class="footer-link">3D</a>
                 </li>
                 <li>
                     <a href="#" class="footer-link">Construção</a>
