--- a/index.htm
+++ b/index.htm
@@ -61,7 +61,7 @@
                    </li>
             </ul>
             <button class="btn-default">
-                Peça Aqui
+                Contato
             </button>
 
         </div>
@@ -89,26 +89,24 @@
 </a>
 </div>
 
-            </div>
-            <div id="banner">
-                <img src="src/images/imagem1.png" alt="">
-            </div>
-        </section>
-        <section class="sobre">
-            <div class="interface">
-                <div class="flex">
-                    <div class="img-sobre">
-                        <img src="src/images/banner.png" alt="">
-                    </div><!--img-sobre-->
+<section class="sobre">
+    <div class="interface">
+        <div class="flex">
+            <div class="img-sobre">
+                <img src="src/images/perfil.png" alt="">
+            </div><!--img-sobre-->
 
-                    <div class="txt-sobre">
-                        <h2>MUITO PRAZER, <span>SOU JOÃO VICTOR FARIAS.</span></h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At accusantium ducimus dicta suscipit, neque cumque sunt tenetur totam delectus magnam minus ratione. Quidem sequi velit voluptatibus eos omnis ullam officiis.</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quidem quae iusto repellendus eaque, ipsum sed voluptate explicabo voluptas, dolorum porro sequi laudantium? Obcaecati quae, dolores illo officiis a numquam.</p>
-                        </div><!--btn-social-->
-                    </div><!--txt-sobre-->
-                </div><!--flex-->
-            </div><!--interface-->
+            <div class="txt-sobre">
+                <h2>MUITO PRAZER, <span>João Victor Farias Pessoa.</span></h2>
+                <p>Escolhi o tema Automotivo como tema e seguimento para meu primeiro site, pois sou apaixonado por automoção, mecânica, velociadade
+                    e design de veículos desde de pequeno achava um máximo ficar olhando os carros passando na rua enfrente ao restaurante da minha mãe 
+                    decorava os nomes dos carros.
+                    Então, aos meus 19 anos decidi me dedicar a me profissionalizar no setor Automotivo e buscar formas de ampliar meus conhecimentos dentre
+                    elas buscar por informações na internet, me interessei por modelagem 3D que conheci no meu primeiro emprego onde eu fui encaixado justamente
+                    como Jovem Aprendiz no setor de Manutenção e Engenharia  de máquinas de produções fabris na Vedacit. 
+                </p> 
+            </div>                                                                                                                                                                                 
+ 
         <section id="testimonials">
             <img src="src/images/banner.png"  id="testimonial_chef" alt="">
 
