--- a/index.htm
+++ b/index.htm
@@ -78,7 +78,7 @@
     Seja bem vindo ao meu site de exposição automotiva
 </p>
 <div id="cta_buttons">
-    <a href="#" class="btn-default">
+    <a href="parceiros.html" class="btn-default">
     Catalogo de veículos
 </a>
 <a href="tel: +55555" id="phone_button">
@@ -91,24 +91,23 @@
 
 <section class="sobre">
     <div class="interface">
-        <div class="flex">
-            <div class="img-sobre">
-                <img src="src/images/perfil.png" alt="">
-            </div><!--img-sobre-->
-
-            <div class="txt-sobre">
-                <h2>MUITO PRAZER, <span>João Victor Farias Pessoa.</span></h2>
-                <p>Escolhi o tema Automotivo como tema e seguimento para meu primeiro site, pois sou apaixonado por automoção, mecânica, velociadade
-                    e design de veículos desde de pequeno achava um máximo ficar olhando os carros passando na rua enfrente ao restaurante da minha mãe 
-                    decorava os nomes dos carros.
-                    Então, aos meus 19 anos decidi me dedicar a me profissionalizar no setor Automotivo e buscar formas de ampliar meus conhecimentos dentre
-                    elas buscar por informações na internet, me interessei por modelagem 3D que conheci no meu primeiro emprego onde eu fui encaixado justamente
-                    como Jovem Aprendiz no setor de Manutenção e Engenharia  de máquinas de produções fabris na Vedacit. 
-                </p> 
-            </div>                                                                                                                                                                                 
+    <div class="flex">
+    <div class="txt-topo-site">
+    <h1>Ultrapassando os limites da criatividade<span>.</span></h1>
+    <p>Escolhi o tema Automotivo como tema e seguimento para meu primeiro site, pois sou apaixonado por automoção, mecânica, velociadade
+        e design de veículos desde de pequeno achava um máximo ficar olhando os carros passando na rua enfrente ao restaurante da minha mãe 
+        decorava os nomes dos carros.
+        Então, aos meus 19 anos decidi me dedicar a me profissionalizar no setor Automotivo e buscar formas de ampliar meus conhecimentos dentre
+        elas buscar por informações na internet, me interessei por modelagem 3D que conheci no meu primeiro emprego onde eu fui encaixado justamente
+        como Jovem Aprendiz no setor de Manutenção e Engenharia  de máquinas de produções fabris na Vedacit.</p>    
+    </div><!--txt-topo-site-->
+    </div><!--flex-->
+    </div><!--interface-->
+        
+                                                                                                                                                                                         
  
-        <section id="testimonials">
-            <img src="src/images/banner.png"  id="testimonial_chef" alt="">
+        <section id="empresas">
+            <img src="src/images/banner.png"  id="parceiros" alt="">
 
             <div id="testimonials_content">
                 <h2 class="section-title">
@@ -159,7 +158,7 @@
                     </div>
                 </div>
                 <button class="btn-default">
-                    <a href="parceiros.html" id="btn-default">Saiba mais</a>
+                    <a href="" id="btn-default">Saiba mais</a>
                 </button>
             </div>
         </section>
