--- a/2°Proposta/index2.html
+++ b/2°Proposta/index2.html
@@ -34,6 +34,29 @@
     </div><!--btn-contato-->
     </div><!--interface-->
     </header>
+
+    <main>
+        <section class="topo-do-site">
+        <div class="interface">
+        <div class="flex">
+        <div class="txt-topo-site">
+        <h1>ACELERANDO A SUA IMAGINAÇÃO<span>.</span></h1>
+        <p>Escolhi o tema Automotivo como tema e seguimento para meu primeiro site, pois sou apaixonado por automoção, mecânica, velociadade
+            e design de veículos desde de pequeno achava um máximo ficar olhando os carros passando na rua enfrente ao restaurante da minha mãe 
+            decorava os nomes dos carros.
+            Então, aos meus 19 anos decidi me dedicar a me profissionalizar no setor Automotivo e buscar formas de ampliar meus conhecimentos dentre
+            elas buscar por informações na internet, me interessei por modelagem 3D que conheci no meu primeiro emprego onde eu fui encaixado justamente
+            como Jovem Aprendiz no setor de Manutenção e Engenharia  de máquinas de produções fabris na Vedacit.</p>
+        </div><!--txt-topo-site-->
+        
+        <div class="txt-topo-site">
+
+        </div>
+        </div><!--img-topo-site-->
+        </div><!--flex-->
+        </div><!--interface-->
+        </section><!--topo-do-site-->
+    </main>
     
 </body>
 </html>
