--- a/2°Proposta/index2.html
+++ b/2°Proposta/index2.html
@@ -81,7 +81,7 @@
                 <div class="flex">
                     <div class="especialidades-box">
                         <i class="bi bi-speedometer"></i>
-                       <h3>Expoxição Automotiva</h3>
+                       <h3>Exposição Automotiva</h3>
                        <p>A PucNotSip nasceu com o próposito de expor minha paixão pelo Automobilismo colocando em prática meu conhecimento adquirido em um curso de Desenvolvimento Web que eu realizei.</p>
                     </div><!--especialidades-box-->
                     <div class="especialidades-box">
@@ -94,10 +94,24 @@
                        <h3>Demonstrar minha paixão</h3>
                        <p>Desde criança sempre gostei de veículos, assistir as corridas da fórmula1 que passavam na TV nas manhã de domingo, gostava de decorar o nome de veículos que passavam na rua.</p>
                     </div><!--especialidades-box-->
+
                 </div><!--flex-->
             </div><!--interface-->
         </section><!--especialidades-->
-        </section>
+        <section class="sobre">
+        <div class="interface">
+        <div class="flex">
+        <div class="img-sobre">
+        <img src="images/perfil.png" alt="">
+        </div><!--img-sobre-->
+            <div class="txt-sobre">
+                <h2>MUITO PRAZER, <span>SOU JOÃO VICTOR FARIAS PESSOA.</span></h2>
+                <P></P>
+                <P></P>
+        </div><!--txt-sobre-->
+        </div><!--flex-->
+        </div><!--interface-->
+        </section><!--sobre-->
     </main>
 
 </body>
