--- a/2°Proposta/index2.html
+++ b/2°Proposta/index2.html
@@ -106,8 +106,16 @@
         </div><!--img-sobre-->
             <div class="txt-sobre">
                 <h2>MUITO PRAZER, <span>SOU JOÃO VICTOR FARIAS PESSOA.</span></h2>
-                <P></P>
-                <P></P>
+                <p>Olá!
+                   Meu nome João Victor Farias Pessoa, nasci no estado de São Paulo onde moro atualmente, gosto de viver a vida de uma forma simples em busca da paz interior, meus hobbies são aproveitar meu tempo livre para jogar algo com os amigos, assistir vídeos na internet, andar de bicicleta, caminhar, jogar bola, ouvir música, desenhar entre outros.
+                </p>
+                   <p>Gosto de estudar sobre temas dos quais me dspertam interesse dentre eles estão finanças, Desenvolvimento Web, Desenvolvimento Pessoal, Física, Engenharia Mecânica e Automobilismo e Neorociência.
+                </P>
+                <div class="btn-social">
+                <a href="#"><button><i class="bi bi-instagram"></i></button></a>
+                <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                <a href="#"><button><i class="bi bi-github"></i></button></a>
+                </div><!--btn-social-->
         </div><!--txt-sobre-->
         </div><!--flex-->
         </div><!--interface-->
