--- a/3°Proposta/index.html
+++ b/3°Proposta/index.html
@@ -1,36 +1,206 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>PucnotSip</title>
-</head>
-<body>
-    
-    <header>
-        <div class="interface">
 
-             <section class="">
-                <img src="" alt="Logotipo do site">
-             </section>         
-             <section class="menu-desktop">
-                <nav>
-                   <ul>
-                    <li><a href="#">início</a></li>
-                    <li><a href="#">início</a></li>
-                    <li><a href="#">início</a></li>
-                    <li><a href="#">início</a></li>
-                   </ul> 
-                </nav>
-             </section>
-             <section class="btn-contato">
-               <a href="#">
-                <button>Contato</button>
-               </a>
-             </section>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+
+  <!--INÍCIO GOOGLE FONTS-->
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!--FIM GOOGLE FONTS-->
+
+  <!--BOOTSTRAP ICONS-->
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+  <!--FIM BOOTSTRAP ICONS-->
+
+  <title>PucnotSip</title>
+</head>
+
+<body>
+
+  <header>
+    <div class="interface">
+
+      <section class="logo">
+        <img src="" alt="Logotipo do site">
+      </section>
+      <section class="menu-desktop">
+        <nav>
+          <ul>
+            <li><a href="#">início</a></li>
+            <li><a href="#">início</a></li>
+            <li><a href="#">início</a></li>
+            <li><a href="#">início</a></li>
+          </ul>
+        </nav>
+      </section>
+      <section class="btn-contato">
+        <a href="#">
+          <button>Contato</button>
+        </a>
+      </section><!--btn-contato-->
+
+    </div><!--interface-->
+
+  </header>
+
+  <section class="hero-site">
+
+    <div class="interface">
+
+      <div class="txt-hero">
+
+        <h1>Acelerando a <span>sua imaginação</span></h1>
+        <p>Ultrapassando os limites <span>da imaginação</span></p>
+        <a href="#">
+
+          <button>Saiba Mais</button>
+
+        </a>
+
+      </div>
+
+    </div>
+
+  </section>
+
+  <section class="curiosidades">
+    <div class="interface">
+
+      <article class="itens-container">
+
+        <div class="txt-itens">
+
+          <h3><span>Nossos</span><br> parceiros</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quo magni voluptatum atque quia nam nihil.</p>
 
         </div>
-    </header>
+
+        <div class="img-itens">
+          <img src="/images/localizaçaoicon.png" alt="">
+        </div>
+
+      </article>
+
+      <article class="itens-container">
+
+        <div class="img-itens">
+          <img src="images/toyotacorolla.png" alt="">
+        </div>
+
+        <div class="txt-itens">
+
+          <h3><span>Nossos</span><br> parceiros</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quo magni voluptatum atque quia nam nihil.</p>
+
+        </div>
+
+
+      </article>
+
+      <article class="itens-container">
+
+        <div class="txt-itens">
+
+          <h3><span>Nossos</span><br> parceiros</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quo magni voluptatum atque quia nam nihil.</p>
+
+        </div>
+
+        <div class="img-itens">
+          <img src="images/volkswagenpolo.png" alt="">
+        </div>
+
+      </article>
+
+      <article class="itens-container">
+
+        <div class="img-itens">
+          <img src="images/toyotacorolla.png" alt="">
+        </div>
+
+        <div class="txt-itens">
+
+          <h3><span>Nossos</span><br> parceiros</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quo magni voluptatum atque quia nam nihil.</p>
+
+        </div>
+
+
+      </article>
+
+    </div>
+  </section>
+
+  <section class="contato">
+    <div class="interface">
+
+      <article class="txt-contato">
+        <h3>Entre em contato
+          <span>comigo por uma de minhas redes</span></h3>
+        <p>Adquirindo conhecimento pelas curvas da vida</p>
+      </article>
+
+      <article class="icons-contato">
+        <a href="#">
+
+          <button>
+            <i class="bi bi-whatsapp"></i>
+            <p>Chamar no WhatsApp</p></i>
+          </button>
+
+        </a>
+        <a href="#">
+
+          <button>
+            <i class="bi bi-envelope"></i>
+            <p>Chamar no email</p></i>
+          </button>
+
+        </a>
+        <a href="#">
+
+          <button>
+            <i class="bi bi-telephone"></i>
+            <p>Ligar</p></i>
+          </button>
+
+        </a>
+        <a href="#">
+
+          <button>
+            <i class="bi bi-instagram"></i>
+            <p>Chamar no instagram</p></i>
+          </button>
+
+        </a>
+      </article>
+
+    </div>
+
+  </section>
+  
+  <section class="veículos">
+    <div class="interface">
+
+      <h3>Categoria de picapes <span>Ford</span></h3>
+      <p>Caminhonete ou camionete é o veículo de carga com peso de transporte não superior a 3.500kg e que possui uma área aberta de carga separada da cabine. É o que chamamos de picape. Transporta muita carga, ao mesmo tempo que pode levar até 6 pessoas com muito conforto e espaço interno.</p>
+      <a href="">
+        <button>Site da Empresa</button>
+      </a>
+
+    </div>
+
+    <div class="overlay"></div>
+   
+  </section>
+
 </body>
 </html>
