--- a/3°Proposta/index.html
+++ b/3°Proposta/index.html
@@ -20,12 +20,16 @@
 
   <!--FIM BOOTSTRAP ICONS-->
 
+  <!--SCRIPS DE JS-->
+  <script src="js/menu.js" defer></script>
+  <!--SCRIPS DE JS-->
+
   <title>PucnotSip</title>
 </head>
 
 <body>
 
-  <header>
+  <header id="header">
     <div class="interface">
 
       <section class="logo">
@@ -74,7 +78,7 @@
   <section class="curiosidades">
     <div class="interface">
 
-      <article class="itens-container">
+      <article class="itens-container"> 
 
         <div class="txt-itens">
 
@@ -139,54 +143,6 @@
     </div>
   </section>
 
-  <section class="contato">
-    <div class="interface">
-
-      <article class="txt-contato">
-        <h3>Entre em contato
-          <span>comigo por uma de minhas redes</span></h3>
-        <p>Adquirindo conhecimento pelas curvas da vida</p>
-      </article>
-
-      <article class="icons-contato">
-        <a href="#">
-
-          <button>
-            <i class="bi bi-whatsapp"></i>
-            <p>Chamar no WhatsApp</p></i>
-          </button>
-
-        </a>
-        <a href="#">
-
-          <button>
-            <i class="bi bi-envelope"></i>
-            <p>Chamar no email</p></i>
-          </button>
-
-        </a>
-        <a href="#">
-
-          <button>
-            <i class="bi bi-telephone"></i>
-            <p>Ligar</p></i>
-          </button>
-
-        </a>
-        <a href="#">
-
-          <button>
-            <i class="bi bi-instagram"></i>
-            <p>Chamar no instagram</p></i>
-          </button>
-
-        </a>
-      </article>
-
-    </div>
-
-  </section>
-  
   <section class="veículos">
     <div class="interface">
 
@@ -201,6 +157,107 @@
     <div class="overlay"></div>
    
   </section>
+  
+  <section class="nossos-parceiros">
+  <div class="interface">
+    <div class="txt-parceiros">
+      <h3>Nossos <span>parceiros</span></h3>
+    </div>
+
+    <div class="instrucoes">
+
+      <article class="instru-box">
+
+        <div class="img-intru-box">
+          <img src="images/logotipoford.png" alt="">
+        </div>
+
+        <div class="txt-intru-box">
+          <h4>Ford</h4>
+          <p>A Ford é a segunda maior fabricante de automóveis norte-americana (precedida pela General Motors) e a quinta maior do mundo com base nas vendas de veículos em 2010. No final de 2010, a Ford era a quinta maior fabricante de automóveis na Europa e no Brasil em 2019.</p>
+        </div>
+
+      </article>
+
+      <article class="instru-box">
+
+        <div class="img-intru-box">
+          <img src="images/logotipovolkswagen.png" alt="">
+        </div>
+
+        <div class="txt-intru-box">
+          <h4>Volkswagen</h4>
+          <p>A empresa nasceu nos anos 1930, na Alemanha, com a proposta de construir um automóvel que fosse acessível ao cidadão comum. O carro popular era um projeto para que os alemães, abalados pela Primeira Guerra Mundial (1914-1918) e suas consequências, pudessem ter um transporte para uso pessoal.</p>
+        </div>
+
+      </article>
+
+      <article class="instru-box">
+
+        <div class="img-intru-box">
+          <img src="images/logotipochevrolet.png" alt="">
+        </div>
+
+        <div class="txt-intru-box">
+          <h4>Chevrolet</h4>
+          <p>Criada em 1911, sua sede fica em Detroit (EUA), que já foi a capital mundial do carro. Mas nasceu com Louis Chevrolet, mecânico suíço que foi um dos melhores pilotos dos EUA, cuja fama foi usada para vender carros, ideia do outro sócio, William C. Durant.</p>
+        </div>
+
+      </article>
+
+    </div>
+
+  </div>
+
+</section>
+
+<section class="contato">
+  <div class="interface">
+
+    <article class="txt-contato">
+      <h3>Entre em contato
+        <span>comigo por uma de minhas redes</span></h3>
+      <p>Adquirindo conhecimento pelas curvas da vida</p>
+    </article>
+
+    <article class="icons-contato">
+      <a href="#">
+
+        <button>
+          <i class="bi bi-whatsapp"></i>
+          <p>Chamar no WhatsApp</p></i>
+        </button>
+
+      </a>
+      <a href="#">
+
+        <button>
+          <i class="bi bi-envelope"></i>
+          <p>Chamar no email</p></i>
+        </button>
+
+      </a>
+      <a href="#">
+
+        <button>
+          <i class="bi bi-telephone"></i>
+          <p>Ligar</p></i>
+        </button>
+
+      </a>
+      <a href="#">
+
+        <button>
+          <i class="bi bi-instagram"></i>
+          <p>Chamar no instagram</p></i>
+        </button>
+
+      </a>
+    </article>
+
+  </div>
+
+</section>
 
 </body>
 </html>
